# pip-boi

./: .gitignore
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs
gui/: Cargo.toml  flake.nix  tauri.conf.json  tauri.conf.json.bak
gui-server/: Cargo.toml  flake.nix.bak  justfile  package-lock.json
gui-server/src/: app.rs  lib.rs  main.rs
gui-server/src/server/: ingest.rs  mod.rs
gui-server/src/tabs/: mod.rs
gui-server/src/tabs/cal/: mod.rs
gui-server/src/tabs/com/: mod.rs
gui-server/src/tabs/ducky/: mod.rs
gui-server/src/tabs/map/: mod.rs
gui-server/src/tabs/stats/: mod.rs
gui-server/src/tabs/todo/: mod.rs
gui-server/style/: output.css  styles.css
gui/.github/workflows/: rust.yml
gui/src/: main.rs
